[package]
name = "Rustbackend"
version = "0.1.0"
edition = "2021"



[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower = "0.4"

[[bin]]
name = "rust-todo-axum"
path = "src/main.rs"


[dev-dependencies]
anyhow= "1"
httpc-test="0.1.1"
